Fixes alignment issue in Chrome

--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -19,6 +19,7 @@
   padding-left: 1em;
   padding-right: 1em;
   font-size: 0.98em;
+  vertical-align: text-bottom;
 
   max-width: 100%;
   overflow: hidden;
